--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="row">
     </div>
     <div class="col-sm-4">
-      <h3><p class="text-right">Aquí va la foto</p></h3>
+      <img class="img-responsive" src="./media/foto.jpg" class="img-rounded" alt="Foto" width="250" height="250">
     </div>
       <div class="col-sm-8">
         <p class="text-right">
@@ -93,11 +93,95 @@
   </div>
 
   <div class="container">
+    <div class="row">
+      <div class="col-sm-4" style="background-color:lightblue;">
+        <span class="align-middle">
+          <p class="text-right">Habilidades básicas</p>
+        </span>
+      </div>
+      <div class="col-sm-8" style="background-color:lightsteelblue;">
+        <p class="text-left">Facilidad de aprendizaje, entendimiento y coordinación con el trabajo en equipo</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4" style="background-color:lightblue;">
+        <span class="align-middle">
+          <p class="text-right">Idiomas</p>
+        </span>
+      </div>
+      <div class="col-sm-8" style="background-color:lightsteelblue;">
+        <p class="text-left">Español (lengua materna), Inglés (avanzado), Alemán (básico)</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4" style="background-color:lightblue;">
+        <span class="align-middle">
+          <p class="text-right">Especialización<br><br><br><br><br><br><br><br></p>
+        </span>
+      </div>
+      <div class="col-sm-8" style="background-color:lightsteelblue;">
+        <p class="text-left">Dominio de informática, principalmente software libre, y equipo de computo en general.<br>
+          Sistemas Operativos: Linux, Windows.<br>
+          Ofimática: MS-Office, LibreOffice, LaTeX.<br>
+          Programación: C, C++, Java, Python, MySQL.<br>
+          Científico: Matlab, Scilab, Fortran.<br>
+          Gráficos: CorelDRAW, Inkscape, Gimp.<br>
+          Web: HTML, diseño de redes, administración de servidores.<br>
+          Amplio conocimiento y comprensión de matemáticas y física.<br>
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container">
     <h2>Formación académica</h2>
   </div>
 
   <div class="container">
+    <div class="row">
+      <div class="col-sm-4" style="background-color:lightblue;">
+        <span class="align-middle">
+          <p class="text-right">Educación<br><br><br><br><br><br><br><br><br><br><br></p>
+        </span>
+      </div>
+      <div class="col-sm-8" style="background-color:lightsteelblue;">
+        <p class="text-left">
+          Técnico en informática (2007-2010)<br>
+          Centro de Bachillerato Tecnológico e Industrial 246<br>
+          Título de bachillerato técnico en informática.<br><br>
+          Licenciatura en Física (2010-2016)<br>
+          Universidad de Guadalajara<br>
+          Trunca, con certificado parcial.<br><br>
+          Ingeniería Informática (2017-actual)<br>
+          Universidad de Guadalajara<br>
+          Actualmente en curso. Último semestre cursado: 4to semestre.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
     <h2>Objetivos</h2>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4" style="background-color:lightblue;">
+        <span class="align-middle">
+          <p class="text-right"><br><br><br></p>
+        </span>
+      </div>
+      <div class="col-sm-8" style="background-color:lightsteelblue;">
+        <p class="text-left">
+          Formar parte de un equipo de trabajo participando con mis servicios y conocimiento en la solución de problemas a partir de desarrollos integrales orientados a la informática. A su vez, adquiriendo experiencia y aprendizaje, así como la integración al mundo laboral.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <hr>
   </div>
 
 </body>
